--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -113,10 +113,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ilc_di12.tsv\n",
       "lfsq_egan.tsv skipped\n",
       "sdg_08_40.tsv skipped\n",
       "t2020_10.tsv skipped\n",
-      "tec00114.tsv\n",
+      "tec00114.tsv skipped\n",
       "teilm010.tsv skipped\n",
       "teilm011.tsv skipped\n",
       "teilm012.tsv skipped\n",
@@ -158,6 +159,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -173,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
