--- a/notebooks/Check correlation with GDP.ipynb
+++ b/notebooks/Check correlation with GDP.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4  DE  2009  37501"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,15 +109,14 @@
     "# Open file\n",
     "\n",
     "gdp = pd.read_pickle(os.path.join(BASE, \"pickles\", \"GDP_DE_EL_EU.pkl\"))\n",
-    "uep = pd.read_csv(os.path.join(BASE, \"pickles\", \"Clean_Ger_unemplymt.csv\"), \n",
-    "                  index_col=0)\n",
+    "uep = pd.read_pickle(os.path.join(BASE, \"pickles\", \"total_unemployment_rate.pkl\"))\n",
     "\n",
     "gdp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,50 +140,126 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Percentage</th>\n",
+       "      <th>2008</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>geo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>7.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>5.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2012</td>\n",
+       "      <th>AT</th>\n",
+       "      <td>4.1</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4.9</td>\n",
        "      <td>5.4</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BE</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BG</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CH</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CY</th>\n",
+       "      <td>3.7</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>7.1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  Percentage\n",
-       "0  2008         7.5\n",
-       "1  2009         7.8\n",
-       "2  2010         7.0\n",
-       "3  2011         5.8\n",
-       "4  2012         5.4"
+       "     2008  2009  2010  2011  2012  2013  2014  2015  2016  2017  2018  2019\n",
+       "geo                                                                        \n",
+       "AT    4.1   5.3   4.8   4.6   4.9   5.4   5.6   5.7   6.0   5.5   4.9   4.5\n",
+       "BE    7.0   7.9   8.3   7.2   7.6   8.4   8.5   8.5   7.8   7.1   6.0   5.4\n",
+       "BG    5.6   6.8  10.3  11.3  12.3  13.0  11.4   9.2   7.6   6.2   5.2   4.2\n",
+       "CH    NaN   NaN   4.8   4.4   4.5   4.8   4.9   4.8   5.0   4.8   4.7   4.4\n",
+       "CY    3.7   5.4   6.3   7.9  11.9  15.9  16.1  15.0  13.0  11.1   8.4   7.1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
