add combined dataset df_de_el_eu28

--- a/notebooks/education_employment_rate_EU28.ipynb
+++ b/notebooks/education_employment_rate_EU28.ipynb
@@ -2137,6 +2137,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_de_el_eu28.to_pickle(\"../data/output/education_employment_rate_de_el_eu28.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
