--- a/notebooks/gini_cor.ipynb
+++ b/notebooks/gini_cor.ipynb
@@ -3452,7 +3452,7 @@
    },
    "outputs": [],
    "source": [
-    "new_gini = pd.read_csv(\"../data/pickles/ilc_di12.csv\")"
+    "new_gini = pd.read_csv(\"../data/pickles/total_unempl.csv\")"
    ]
   },
   {
