--- a/notebooks/clean_GDP_data.ipynb
+++ b/notebooks/clean_GDP_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4      AUS       GDP     TOT  MLN_USD         A  1964  32694.467        NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +243,25 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.pivot(index=\"time\", columns=\"geo\", values=\"value\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns.name = \"\"\n",
+    "df.index.name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -266,56 +285,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>geo</th>\n",
-       "      <th>time</th>\n",
-       "      <th>value</th>\n",
+       "      <th>DE</th>\n",
+       "      <th>EL</th>\n",
+       "      <th>EU28</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>2005</td>\n",
+       "      <th>2005</th>\n",
        "      <td>32236</td>\n",
+       "      <td>25577</td>\n",
+       "      <td>27583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>2006</td>\n",
+       "      <th>2006</th>\n",
        "      <td>34624</td>\n",
+       "      <td>28514</td>\n",
+       "      <td>29849</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>2007</td>\n",
+       "      <th>2007</th>\n",
        "      <td>36820</td>\n",
+       "      <td>29289</td>\n",
+       "      <td>31628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>2008</td>\n",
+       "      <th>2008</th>\n",
        "      <td>38432</td>\n",
+       "      <td>30855</td>\n",
+       "      <td>33065</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>2009</td>\n",
+       "      <th>2009</th>\n",
        "      <td>37501</td>\n",
+       "      <td>30388</td>\n",
+       "      <td>32277</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  geo  time  value\n",
-       "0  DE  2005  32236\n",
-       "1  DE  2006  34624\n",
-       "2  DE  2007  36820\n",
-       "3  DE  2008  38432\n",
-       "4  DE  2009  37501"
+       "         DE     EL   EU28\n",
+       "                         \n",
+       "2005  32236  25577  27583\n",
+       "2006  34624  28514  29849\n",
+       "2007  36820  29289  31628\n",
+       "2008  38432  30855  33065\n",
+       "2009  37501  30388  32277"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x193b0bb7f10>"
+       "<matplotlib.legend.Legend at 0x225b35dc490>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -355,21 +381,28 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(15,6))\n",
     "\n",
-    "for country in df[\"geo\"].unique():\n",
-    "    ax.plot(\"time\", \"value\", data=df[df[\"geo\"] == country], label=country)\n",
+    "for country in df.columns:\n",
+    "    ax.plot(country, data=df, label=country)\n",
     "ax.set_title(\"GDP in USD per capita\")\n",
     "ax.legend()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
     "df.to_pickle(os.path.join(BASE, \"pickles\", \"GDP_DE_EL_EU.pkl\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
