--- a/notebooks/sex_country_analysis.ipynb
+++ b/notebooks/sex_country_analysis.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4    CY  6.38  5.63  6.00"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,15 +240,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "just compare DE greece eu28 in percentage points"
+    "Filter for Germany, Greece and the EU28 countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>geo</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DE</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>EL</td>\n",
+       "      <td>19.05</td>\n",
+       "      <td>12.74</td>\n",
+       "      <td>15.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>EU28</td>\n",
+       "      <td>5.72</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "sex   geo      F      M      T\n",
+       "6      DE   3.16   3.67   3.44\n",
+       "12     EL  19.05  12.74  15.51\n",
+       "16   EU28   5.72   5.12   5.40"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df[\"geo\"] == \"EU28\") | (df[\"geo\"] == \"DE\")  | (df[\"geo\"] == \"EL\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Greece: overall highest unemployment rate + big difference between female and mal"
+   ]
   }
  ],
  "metadata": {
