adding sex_country_analysis

--- a/notebooks/sex_country_analysis.ipynb
+++ b/notebooks/sex_country_analysis.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -111,6 +118,13 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prefer to work with a column instead of an index"
    ]
   },
   {
@@ -321,13 +335,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Greece: overall highest unemployment rate + big difference between female and mal"
+    "Difference between the unemployment rate between males and females for the EU28 countries, Greece and Germany"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The table this analysis is based on includes the overall mean for all years. This analysis focuses\n",
+      "on the difference between the unemployment rate of males and females for Germany, Greece and the EU28 countries\n",
+      "combined. The data is about the active population, meaning people who are unemployed and willing to work. This \n",
+      "already eliminates other factors e.g.  maternity/paternity leave, stay-at-home mothers/dads, among others.\n",
+      "\n",
+      "The total unemployment for rate, total of males and females (T), for all EU28 countries is 5.4. \n",
+      "Germany is doing better in this regard and has a lower total unemployment rate with a difference of \n",
+      "1.96 percent points compared to the EU28 countries. Greece has the highest unemployment rate of 15.51, \n",
+      "which is 10.11 percent points higher than the EU28 countries and 12.07 \n",
+      "percent points higher than Germany.\n",
+      "\n",
+      "For all EU28 countries combined, we see there is a slight difference in the unemployment rate \n",
+      "for male and female. The total overall difference for all EU28 countries is 0.6 percent points.\n",
+      "The difference between the 2 genders is smaller than all EU28 countries combined, namely 0.51.\n",
+      "The biggest difference is visible in Greece, there's a difference of 6.31. The unemployment rate \n",
+      "among females is much higher than for males. A 2009 research paper states that in Greece there is clear evidence\n",
+      "of gender differences and that there is evidence of female employment discbrimination (article:'Gender employment \n",
+      "discrimination: Greece and the United Kingdom', written by Ilias Livanos, Çagri Yalkin, Imanol Nuñez, 2009) \n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_eu28 = df[\"F\"][16] - df[\"M\"][16]\n",
+    "diff_greece = df[\"F\"][12] - df[\"M\"][12]\n",
+    "diff_germany = df[\"M\"][6] - df[\"F\"][6]\n",
+    "t_eu28 = df[\"T\"][16]\n",
+    "t_greece = df[\"T\"][12]\n",
+    "t_germany = df[\"T\"][6]\n",
+    "diff_t_germany_eu28 = df[\"T\"][16] - df[\"T\"][6]\n",
+    "diff_t_greece_eu28 = df[\"T\"][12] - df[\"T\"][16]\n",
+    "diff_t_greece_germany = df[\"T\"][12] - df[\"T\"][6]\n",
+    "\n",
+    "print(f\"\"\"The table this analysis is based on includes the overall mean for all years. This analysis focuses\n",
+    "on the difference between the unemployment rate of males and females for Germany, Greece and the EU28 countries\n",
+    "combined. The data is about the active population, meaning people who are unemployed and willing to work. This \n",
+    "already eliminates other factors e.g.  maternity/paternity leave, stay-at-home mothers/dads, among others.\n",
+    "\n",
+    "The total unemployment for rate, total of males and females (T), for all EU28 countries is {round(t_eu28, 2)}. \n",
+    "Germany is doing better in this regard and has a lower total unemployment rate with a difference of \n",
+    "{round(diff_t_germany_eu28,2)} percent points compared to the EU28 countries. Greece has the highest unemployment rate of {round(t_greece, 2)}, \n",
+    "which is {round(diff_t_greece_eu28, 2)} percent points higher than the EU28 countries and {round(diff_t_greece_germany, 2)} \n",
+    "percent points higher than Germany.\n",
+    "\n",
+    "For all EU28 countries combined, we see there is a slight difference in the unemployment rate \n",
+    "for male and female. The total overall difference for all EU28 countries is {round(diff_eu28, 2)} percent points.\n",
+    "The difference between the 2 genders is smaller than all EU28 countries combined, namely {round(diff_germany, 2)}.\n",
+    "The biggest difference is visible in Greece, there's a difference of {round(diff_greece, 2)}. The unemployment rate \n",
+    "among females is much higher than for males. A 2009 research paper states that in Greece there is clear evidence\n",
+    "of gender differences and that there is evidence of female employment discbrimination (article:'Gender employment \n",
+    "discrimination: Greece and the United Kingdom', written by Ilias Livanos, Çagri Yalkin, Imanol Nuñez, 2009) \"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
