update edu germany

--- a/notebooks/education_employment_rate_EU28.ipynb
+++ b/notebooks/education_employment_rate_EU28.ipynb
@@ -1550,6 +1550,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Actually after making this stacked bar chart we realized that we are stacking percentages, which is not possible. We dropped the y-axis here and won't include the graph in our presentation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
