--- a/notebooks/education_employment_rate_greece.ipynb
+++ b/notebooks/education_employment_rate_greece.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>isced11</th>\n",
+       "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>ED0-2</th>\n",
        "      <th>ED3_4</th>\n",
@@ -1142,25 +1142,25 @@
        "</div>"
       ],
       "text/plain": [
-       "isced11  year  ED0-2  ED3_4  ED5-8\n",
-       "0        2005   58.0   62.7   80.9\n",
-       "1        2006   59.6   62.9   82.1\n",
-       "2        2007   60.2   62.8   81.8\n",
-       "3        2008   60.4   63.3   82.0\n",
-       "4        2009   59.8   62.4   81.5\n",
-       "5        2010   57.8   60.6   78.8\n",
-       "6        2011   53.5   56.3   74.0\n",
-       "7        2012   48.0   51.4   70.3\n",
-       "8        2013   45.8   48.7   68.2\n",
-       "9        2014   46.5   49.2   67.6\n",
-       "10       2015   48.1   51.1   67.9\n",
-       "11       2016   48.1   52.5   69.6\n",
-       "12       2017   49.2   54.1   70.8\n",
-       "13       2018   49.9   55.5   73.3\n",
-       "14       2019   50.2   57.4   75.2"
+       "    year  ED0-2  ED3_4  ED5-8\n",
+       "0   2005   58.0   62.7   80.9\n",
+       "1   2006   59.6   62.9   82.1\n",
+       "2   2007   60.2   62.8   81.8\n",
+       "3   2008   60.4   63.3   82.0\n",
+       "4   2009   59.8   62.4   81.5\n",
+       "5   2010   57.8   60.6   78.8\n",
+       "6   2011   53.5   56.3   74.0\n",
+       "7   2012   48.0   51.4   70.3\n",
+       "8   2013   45.8   48.7   68.2\n",
+       "9   2014   46.5   49.2   67.6\n",
+       "10  2015   48.1   51.1   67.9\n",
+       "11  2016   48.1   52.5   69.6\n",
+       "12  2017   49.2   54.1   70.8\n",
+       "13  2018   49.9   55.5   73.3\n",
+       "14  2019   50.2   57.4   75.2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
