--- a/notebooks/filter_for_sex.ipynb
+++ b/notebooks/filter_for_sex.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4      5.6      5.9      7.3      7.3      6.1      5.3      NaN  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "array(['F', 'M', 'T'], dtype=object)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +563,7 @@
        "US          6.16   5.55   5.85"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
    "source": [
     "# Transform the table\n",
     "df = (df\n",
-    "     .drop(columns=t.columns[2:-1])\n",
+    "     .drop(columns=df.columns[2:-1])\n",
     "     .pivot(index=\"geo\", columns=\"sex\", values=\"mean\")\n",
     "     .round(2))\n",
     "df"
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "4     17.0     18.0     15.0     13.0      NaN  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1077,7 +1077,7 @@
        "US         5369.00  5554.36  10923.36"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1085,7 @@
    "source": [
     "abs_df[\"mean\"] = abs_df[abs_df.columns[2:]].mean(axis=1)\n",
     "abs_df = (abs_df\n",
-    "         .drop(columns=t.columns[2:-1])\n",
+    "         .drop(columns=df.columns[2:-1])\n",
     "         .pivot(index=\"geo\", columns=\"sex\", values=\"mean\")\n",
     "         .round(2))\n",
     "abs_df"
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1574,7 +1574,7 @@
        "JP           NaN    NaN    NaN   1730.91   40.23   59.77"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,20 +1585,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
-    "df.to_pickle(os.path.join(BASE, \"output\", \"filtered_sex_country.pkl\"))"
+    "df.to_pickle(os.path.join(BASE, \"output\", \"filtered_sex_country.pkl\"))\n",
+    "df.to_csv(os.path.join(BASE, \"output\", \"filtered_sex_country.csv\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1618,7 +1612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
