--- a/notebooks/Cleanup_total_unemployment.ipynb
+++ b/notebooks/Cleanup_total_unemployment.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,12 +620,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
-    "df.to_pickle(os.path.join(BASE, \"pickles\", \"total_unemployment_rate.pkl\"))"
+    "df.to_pickle(os.path.join(BASE, \"pickles\", \"total_unemployment_rate.pkl\"))\n",
+    "df.to_csv(os.path.join(BASE, \"pickles\", \"total_unemployment_rate.csv\"))"
    ]
   },
   {
