Change in analysis sex

--- a/notebooks/sex_country_analysis.ipynb
+++ b/notebooks/sex_country_analysis.ipynb
@@ -392,7 +392,8 @@
     "\n",
     "For all EU28 countries combined, we see there is a slight difference in the unemployment rate \n",
     "for male and female. The total overall difference for all EU28 countries is {round(diff_eu28, 2)} percent points.\n",
-    "The difference between the 2 genders is smaller than all EU28 countries combined, namely {round(diff_germany, 2)}.\n",
+    "For Germany, the difference between the 2 genders is smaller than all EU28 countries combined, namely {round(diff_germany, 2)}.\n",
+    "Plus, in Germany the unemployment rate for males is slightly higher than for females. \n",
     "The biggest difference is visible in Greece, there's a difference of {round(diff_greece, 2)}. The unemployment rate \n",
     "among females is much higher than for males. A 2009 research paper states that in Greece there is clear evidence\n",
     "of gender differences and that there is evidence of female employment discbrimination (article:'Gender employment \n",
@@ -424,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
