undo gender work

--- a/notebooks/Combined_education_data.ipynb
+++ b/notebooks/Combined_education_data.ipynb
@@ -392,11 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
+    "combi.index = combi.index.astype(int)\n",
     "combi.to_pickle(os.path.join(BASE, \n",
     "                             \"output\",\n",
     "                             \"education_employment_rate_de_el_eu28.pkl\"))"
@@ -404,97 +405,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DE</th>\n",
-       "      <th>EL</th>\n",
-       "      <th>EU28</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>7.5</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>7.8</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>8.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>9.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>9.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>10.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       DE    EL  EU28\n",
-       "2008  7.5   7.8   7.0\n",
-       "2009  7.8   9.6   8.9\n",
-       "2010  7.0  12.7   9.6\n",
-       "2011  5.8  17.9   9.6\n",
-       "2012  5.4  24.5  10.5"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import total unemployment data\n",
     "total = pd.read_pickle(os.path.join(BASE, \n",
     "                                    \"pickles\",\n",
     "                                    \"total_unemployment_rate.pkl\"))\n",
-    "drop = [col for col in total.columns if col not in [\"DE\", \"EL\", \"EU28\"]]\n",
+    "count_codes = [\"EU28\", \"DE\", \"EL\"]\n",
+    "drop = [col for col in total.columns if col not in count_codes]\n",
     "total.drop(columns=drop, inplace=True)\n",
-    "total.head()"
+    "total = total[count_codes]\n",
+    "total = total.loc[2012]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel_rate = combi.loc[2012]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel_rate = pd.concat([rel_rate, total])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -510,54 +456,43 @@
        "low_greece      52.0\n",
        "med_greece      48.6\n",
        "high_greece     29.7\n",
+       "EU28            10.5\n",
+       "DE               5.4\n",
+       "EL              24.5\n",
        "Name: 2012, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combi.index = combi.index.astype(int)\n",
-    "combi.loc[2012]"
+    "rel_rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "low = 15\n",
-    "med = 20\n",
-    "hi = 25\n",
-    "tot = 60\n",
-    "lr = low / tot\n",
-    "mr = med / tot\n",
-    "hr = hi / tot\n",
-    "tr = sum([lr, mr, hr])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.25\n",
-      "0.3333333333333333\n",
-      "0.4166666666666667\n",
-      "1.0\n"
+      "[{'eu28': [4.56, 5.63, 0.74]}, {'germany': [4.02, 4.3, 0.5]}, {'greece': [4.95, 9.0, 1.21]}]\n"
      ]
     }
    ],
    "source": [
-    "for x in [lr, mr, hr, tr]:\n",
-    "    print(x)"
+    "rel_edu = []\n",
+    "i = 0\n",
+    "for country in countries:\n",
+    "    rel_edu.append({country: [round(rel_rate.iloc[i+x] / \n",
+    "                              rel_rate[count_codes[x]], 2) \n",
+    "                              for x in range(3)]})\n",
+    "    i += 3\n",
+    "print(rel_edu)"
    ]
   },
   {
