--- a/notebooks/education_combined_data.ipynb
+++ b/notebooks/education_combined_data.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "2009        59.8        62.4         81.5  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,6 +313,7 @@
     "\n",
     "# Merge df's\n",
     "emp_combi = pd.concat(empl, axis=1)\n",
+    "emp_combi.index = emp_combi.index.astype(int)\n",
     "emp_combi.head()"
    ]
   },
@@ -455,6 +456,7 @@
     "\n",
     "# Merge df's\n",
     "combi = pd.concat(dfs, axis=1)\n",
+    "combi.index = combi.index.astype(int)\n",
     "combi.head()"
    ]
   },
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +569,7 @@
        "Name: 2012, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,8 +585,6 @@
    "outputs": [],
    "source": [
     "# Export\n",
-    "\n",
-    "mode.index = mode.index.astype(int)\n",
     "filename = os.path.join(BASE, \n",
     "                        \"output\",\n",
     "                        \"education_unemployment_rate_de_el_eu28\")\n",
@@ -601,74 +601,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geo</th>\n",
-       "      <th>low</th>\n",
-       "      <th>med</th>\n",
-       "      <th>hi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>eu28</td>\n",
-       "      <td>52.1</td>\n",
-       "      <td>69.6</td>\n",
-       "      <td>81.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>germany</td>\n",
-       "      <td>57.8</td>\n",
-       "      <td>76.8</td>\n",
-       "      <td>87.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>greece</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>51.4</td>\n",
-       "      <td>70.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       geo   low   med    hi\n",
-       "0     eu28  52.1  69.6  81.9\n",
-       "1  germany  57.8  76.8  87.7\n",
-       "2   greece  48.0  51.4  70.3"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year = 2012\n",
     "\n",
@@ -679,13 +614,22 @@
     "    trans.append([countries[i // 3]] + list(emp_combi.loc[year][i: i + 3]))\n",
     "cols = [\"geo\", \"low\", \"med\", \"hi\"]\n",
     "\n",
-    "t_df = pd.DataFrame(trans, columns=cols)\n",
-    "t_df"
+    "t_df = pd.DataFrame(trans, columns=cols).set_index(\"geo\")\n",
+    "t_df = t_df.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_df.columns.name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
