transposed sex data

--- a/notebooks/sex_country_analysis.ipynb
+++ b/notebooks/sex_country_analysis.ipynb
@@ -2,24 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "BASE = os.path.join(os.pardir, \"data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"../data/output/filtered_sex_country.pkl\")"
+    "df = pd.read_pickle(\"../data/output/filtered_sex_country.pkl\")\n",
+    "df_t = df.copy()"
    ]
   },
   {
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +116,7 @@
        "CY   6.38  5.63  6.00"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +222,7 @@
        "4    CY  6.38  5.63  6.00"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +403,128 @@
     "among females is much higher than for males. A 2009 research paper states that in Greece there is clear evidence\n",
     "of gender differences and that there is evidence of female employment discbrimination (article:'Gender employment \n",
     "discrimination: Greece and the United Kingdom', written by Ilias Livanos, Çagri Yalkin, Imanol Nuñez, 2009) \"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transpose data for Tableau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transpose\n",
+    "df_t = df_t.T\n",
+    "\n",
+    "# Drop other countries\n",
+    "keep = [\"DE\", \"EL\", \"EU28\"]\n",
+    "drop = [col for col in df_t.columns if col not in keep]\n",
+    "df_t.drop(columns=drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop labels\n",
+    "df_t.columns.name = \"\"\n",
+    "df_t.index.name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DE</th>\n",
+       "      <th>EL</th>\n",
+       "      <th>EU28</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>3.16</td>\n",
+       "      <td>19.05</td>\n",
+       "      <td>5.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>3.67</td>\n",
+       "      <td>12.74</td>\n",
+       "      <td>5.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T</th>\n",
+       "      <td>3.44</td>\n",
+       "      <td>15.51</td>\n",
+       "      <td>5.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     DE     EL  EU28\n",
+       "                    \n",
+       "F  3.16  19.05  5.72\n",
+       "M  3.67  12.74  5.12\n",
+       "T  3.44  15.51  5.40"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the file to CSV\n",
+    "df_t.to_csv(os.path.join(BASE, \n",
+    "                         \"output\",\n",
+    "                         \"sex_transposed.csv\"))"
    ]
   },
   {
